pattern matching WIP

--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -3,17 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'println' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-25b77ab58460>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprintln\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Hello World!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'println' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
      ]
     }
    ],
@@ -29,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "[merrywivesofwindsor, twelfthnight, midsummersnightsdream, loveslabourslost, asyoulikeit, comedyoferrors, muchadoaboutnothing, tamingoftheshrew]"
+       "Array(merrywivesofwindsor, twelfthnight, midsummersnightsdream, loveslabourslost, asyoulikeit, comedyoferrors, muchadoaboutnothing, tamingoftheshrew)"
       ]
      },
      "execution_count": 2,
@@ -75,7 +73,7 @@
     "### Pourquoi pas Scala ?\n",
     "Scala n'est pas un langage parfait, deux désavantages :\n",
     "* **Librairies:** Python et R ont tous les deux un riche ecosystème de librairies dédiées à l'analyse de données. Bien que Scala s'améliore sur ce point, Python et R restent devant.\n",
-    "* **Fonctionnalités avancées:** Maîtriser des fonctionnalités avancées d'un langage vous donne beaucoup de possibilités dans l'élaboration de vos programmes mais si vous ne comprenez pas ces fonctionnalités, elles peuvent vous rendre la tâche plus ardue tant bien que votre unique but était de finir votre tâche coûte que coûte. Scala a des concepts compliqués, particulièrement dans son _type system_. Heureusement, Spark cache ces concepts avancés."
+    "* **Fonctionnalités avancées:** Maîtriser des fonctionnalités avancées d'un langage vous donne beaucoup de possibilités dans l'élaboration de vos programmes. Mais si vous ne comprenez pas ces fonctionnalités, elles peuvent vous rendre la tâche plus ardue tant bien que votre unique but était de finir votre tâche coûte que coûte. Scala a des concepts compliqués, particulièrement dans son _type system_. Heureusement, Spark cache ces concepts avancés."
    ]
   },
   {
@@ -231,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chargeons des données (et commenceons à apprendre le Scala)\n",
+    "## Chargeons des données (et commençons à apprendre le Scala)\n",
     "Nous allons écrire de vrai programmes Spark et les utiliser pour apprendre Scala et Spark en même temps. \n",
     "\n",
     "Mais tout d'abord, nous allons avoir besoin d'utiliser quelques fichiers texte qui contiennent des pièces de Shakespeare. Les prochaines cellules définissent des méthodes helper pour configurer le tout. Nous apprendrons des concepts Scala à la volée."
@@ -261,16 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-880c684786bc>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-880c684786bc>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    *()\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "info: (message: String)String\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -290,16 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-655ded9b9712>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-655ded9b9712>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    *()\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "error: (message: String)String\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -398,26 +398,14 @@
      "data": {
       "text/plain": [
        "\"\n",
+       "********************************************************************\n",
+       "  ERROR: Uh oh...\n",
+       "********************************************************************\n",
        "\"\n"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "********************************************************************\n",
-       "\n",
-       "  ERROR: Uh oh...\n",
-       "\n",
-       "********************************************************************\n"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -426,19 +414,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'errorString' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-01c416b95aa8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0merrorString\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'errorString' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\n",
+       "********************************************************************\n",
+       "  ERROR: Uh oh...\n",
+       "********************************************************************\n",
+       "\"\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -484,16 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-942f41e33672>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-942f41e33672>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    Faites attention dans les cas comme : ${sc}etunautretruc\"\"\"\u001b[0m\n\u001b[0m                                                               \n^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Utilisez des accolades pour les expressions : 2.4.0.\n",
+       "Elles sont optionnelles quand vous utilisez juste une variable : org.apache.spark.SparkContext@43eda0bb\n",
+       "Faites attention dans les cas comme : org.apache.spark.SparkContext@43eda0bbetunautretruc\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1271,7 +1264,7 @@
     "val words = location_contents_tuple2._2.split(\"\"\"\\W+\"\"\")\n",
     "```\n",
     "\n",
-    "For the first tuple element, I extract the file name at the end of the location path. This isn't necessary, but it makes the output more readable if I remove the long, common prefix from the path. \n",
+    "Pour le premier élément du tuple, nous extrayons le nom du fichier en fin de path. Ce n'est pas nécessaire, mais ça permet d'avoir une sortie plus lisible si nous retirons le long préfixe commun du path.\n",
     "\n",
     "```scala\n",
     "val fileName = location_contents_tuple2._1.split(pathSeparator).last\n",
@@ -1790,9 +1783,10 @@
    "metadata": {},
    "source": [
     "## Pattern Matching\n",
-    "We've studied a real program and we've learned quite a bit of Scala. Let's improve it with my favorite Scala feature, _pattern matching_.\n",
     "\n",
-    "Here's the \"first pass\" version again for easy reference."
+    "Nous avons étudié un vrai programme et nous avons appris pas mal de Scala. Améliorons ça avec ma fonctionnalité préférée de Scala : _le pattern matching_.\n",
+    "\n",
+    "Voici la version \"premier passage\" à nouveau."
    ]
   },
   {
@@ -1845,34 +1839,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now here is a new implementation that uses _pattern matching_. \n",
+    "Maintenant, voici une nouvelle implémentation qui utilise le _pattern matching_.\n",
     "\n",
-    "I've also made two other additions, the solutions to the last exercises, which remove empty words \"\" and fix mixed capitalization, using the following additions:\n",
-    "* `filter(word => word.size > 0)` to remove the empty words. (In Spark and Scala collections, `filter` has the positive sense; what should be retained?) It's indicated by the comment `// #1`.\n",
-    "* `word.toLowerCase` to convert all words to lower case uniformly, so that words like HAMLET, Hamlet, and hamlet in the original texts are treated as the same, since we're counting word occurrences. See comment `// #2`."
+    "J'y ai fait deux autres ajouts : les solutions des derniers exercices, qui retire les mots wides \"\" et corrige les majuscules mélangées, en utilisant les ajouts suivants :\n",
+    "\n",
+    "* `filter(word => word.size > 0)` pour retirer les mots vides. (En Spark et dans les collections Scala, `filter` a un sens positif : \"qu'est-ce qui doit être retenu ?\"). C'est indiqué par le commentaire `// #1`.\n",
+    "* `word.toLowerCase` pour convetir tous les mots uniformément en minuscule, tel que des mots comme HAMLET, Hamlet et hamlet dans le texte original sont traités comme étant le même mot, puisque nous comptons les occurences des mots. Voir le commentaire `// #2`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ii1 = MapPartitionsRDD[39] at mapValues at <console>:54\n"
+       "Name: Compile Error\n",
+       "Message: <console>:27: error: not found: value shakespeare\n",
+       "val ii1 = sc.wholeTextFiles(shakespeare.toString).\n",
+       "                            ^\n",
+       "<console>:30: error: value split is not a member of Any\n",
+       "            val words = contents.split(\"\"\"\\W+\"\"\").\n",
+       "                                 ^\n",
+       "<console>:32: error: value split is not a member of Any\n",
+       "            val fileName = location.split(pathSeparator).last\n",
+       "                                    ^\n",
+       "<console>:32: error: not found: value pathSeparator\n",
+       "            val fileName = location.split(pathSeparator).last\n",
+       "                                          ^\n",
+       "<console>:40: error: not found: value ascending\n",
+       "    sortByKey(ascending = true).\n",
+       "              ^\n",
+       "\n",
+       "StackTrace: "
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "MapPartitionsRDD[39] at mapValues at <console>:54"
-      ]
-     },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,18 +1907,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare with your exercise solutions above. I added the filtering inside the function passed to `flatMap`. My choice reduces the number of output records from `flatMap` by at most one record per input line, which shouldn't have a significant impact on performance. Filtering itself adds some extra overhead. \n",
+    "Comparez avec les solutions d'exercice plus haut. J'ai ajouté le filtrage dans la foncrtion passée à `flatMap`. Mon choix réduit le nombre d'enregistrement en sortie de `flatMap` d'au plus un enregistrement par ligne en entrée, ce qui ne devrait pas avoir un impact significatif sur les performance. Le filtrage en lui-même ajoute un peu de surcharge.\n",
     "\n",
-    "Also, the way Spark implements steps like `map`, `flatMap`, `filter`, it would incur about the same overhead if I used `RDD.filter` instead. Note that we could also do the filtering later in the pipeline, after `groupByKey`, for example. So, whichever approach you implemented above is probably fine. You could do performance profiling of the different approaches, but you may not notice a significance difference until you use very large input data sets."
+    "La façon dont Spark implémente des étapes comme `map`, `flatMap`, `filter` entraine la même surcharge que si j'utilisais `RDD.filter`. Notez que nous pouvons aussi faire un filtrage plus tard dans la pipeline, après `groupByKey`, par exemple. Donc, quelque soit l'approche que vous implémentez, c'est probablement bien. Vous pouvez réaliser un profiling de performancedes différentes approches, mais vous ne trouverez pas de différence significative à moins d'utiliser un data set d'entrée très important."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's verify we still get reasonable results. Now I'll use Spark's [DataFrame](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.DataFrame) API for its convenient display options. `DataFrames` are part of [Spark SQL](http://spark.apache.org/docs/latest/sql-programming-guide.html). \n",
+    "Vérifions si nous obtenons toujours des résultats raisonable. Maintenant je vais utiliser l'API [DataFrame](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.DataFrame) de Spark pour ses options d'affichage pratique. `DataFrames` font partis de [Spark SQL](http://spark.apache.org/docs/latest/sql-programming-guide.html). \n",
     "\n",
-    "First, we need to create an instance of [SQLContext](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.SQLContext) that we need to access these features."
+    "Tout d'abord, nous avons besoin de créer une instance de [SQLContext](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.SQLContext) qui nous permettra d'accéder à ces fonctionnalités."
    ]
   },
   {
@@ -1969,7 +1972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we convert the `RDD` to a `DataFrame` with `sqlContext.createDataFrame`, then use `toDF` (convert to another `DataFrame`?) with new names for each \"column\"."
+    "Maintenant, nous convertissons le `RDD` en `DataFrame` avec `sqlContext.createDataFrame` et nous utilisons `toDF` (convertir vers un autre `DataFrame` ?) avec un nouveau pour chaque \"colonne\"."
    ]
   },
   {
@@ -2005,7 +2008,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `%%dataframe` _cell magic_ provides a nice table layout display."
+    "La _cellule magique_ `%%dataframe` founit un sympathique affichage tabulaire."
    ]
   },
   {
@@ -2033,7 +2036,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay, now let's explore the new implementation. I start off as before, by calling `wholeTextFiles`:\n",
+    "OK, maintenant explorons la nouvelle implémentation. Je commence comme précédemment, en appelant `wholeTextFiles` :\n",
     "\n",
     "```scala\n",
     "val ii = sc.wholeTextFiles(shakespeare.toString).\n",
@@ -2044,7 +2047,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function I pass to `flatMap` now looks like this:\n",
+    "La fonction que je passe à `flatMap` maintenant ressemble à ça :\n",
     "\n",
     "```scala\n",
     "flatMap { \n",
@@ -2056,7 +2059,7 @@
     "}.\n",
     "```\n",
     "\n",
-    "Compare it to the previous version (ignoring the enhancements for blank words and capitalization, marked with the \\#1 and \\#2 comments):\n",
+    "Comparez la à la version précédente (en ignorant les améliorations pour les mots vides et les majuscules, marqués avec les commentaires \\#1 et \\#2) :\n",
     "\n",
     "```scala\n",
     "flatMap { location_contents_tuple2 => \n",
@@ -2064,7 +2067,9 @@
     "    val fileName = location_contents_tuple2._1.split(pathSeparator).last\n",
     "    words.map(word => ((word, fileName), 1))\n",
     "}.\n",
-    "```    \n",
+    "```\n",
+    "\n",
+    "À la place de `location_contents_tuple2` un nom de variable pour tout le tuple, J'ai écrit `case (location, contents)`. Le mot-clé `case` indique que j'effectue un _pattern match_ sur l'objet passé à la fonction. Si \n",
     "\n",
     "Instead of `location_contents_tuple2` a variable name for the whole tuple, I wrote `case (location, contents)`. The `case` keyword says I want to _pattern match_ on the object passed to the function. If it's a two-element tuple (and I know it always will be in this case), then _extract_ the first element and assign it to a variable named `location` and extract the second element and assign it to a variable named `contents`.\n",
     "\n",
@@ -4900,21 +4905,17 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Apache Toree - Scala",
+   "language": "scala",
+   "name": "apache_toree_scala"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "codemirror_mode": "text/x-scala",
+   "file_extension": ".scala",
+   "mimetype": "text/x-scala",
+   "name": "scala",
+   "pygments_lexer": "scala",
+   "version": "2.11.12"
   }
  },
  "nbformat": 4,
